MacViews: Don't try to route events when no frame sink is present

This (appropriately) DCHECKs when attempted. Skip event routing (send
directly to the root RWHV) when no frame sink is present.

Bug: 844095
Change-Id: I867c9f6cb7135473fc52fb44dcff7ed5e1759658
Reviewed-on: https://chromium-review.googlesource.com/1071120
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561391}
Former-commit-id: 04ed3f26f5795564e7b40d2efc75888dc9c38338